--- a/web/index.html
+++ b/web/index.html
@@ -18,7 +18,8 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+  <meta name="description" content="IAS Test Series - Comprehensive test preparation for UPSC Civil Services Examination">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -29,7 +30,7 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>exam_ias</title>
+  <title>IAS Test Series</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
