--- a/web/index.html
+++ b/web/index.html
@@ -18,19 +18,19 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="IAS Test Series - Comprehensive test preparation for UPSC Civil Services Examination">
+  <meta name="description" content="IASPilot - Comprehensive test preparation for UPSC Civil Services Examination">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="exam_ias">
+  <meta name="apple-mobile-web-app-title" content="IASPilot">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>IAS Test Series</title>
+  <title>IASPilot</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
